Feat: Add resources and repository
